modify the portfolio

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
     <title>DevFolio Bootstrab Protfolio Team</title>
   </head>
   <body>
@@ -49,28 +50,28 @@
               <li class="nav-item mx-1">
                 <a
                   class="nav-link text-uppercase text-white position-relative"
-                  href="#"
+                  href="#demo-1"
                   >About</a
                 >
               </li>
               <li class="nav-item mx-1">
                 <a
                   class="nav-link text-uppercase text-white position-relative"
-                  href="#"
+                  href="#demo-2"
                   >services</a
                 >
               </li>
               <li class="nav-item mx-1">
                 <a
                   class="nav-link text-uppercase text-white position-relative"
-                  href="#"
+                  href="#demo-3"
                   >work</a
                 >
               </li>
               <li class="nav-item mx-1">
                 <a
                   class="nav-link text-uppercase text-white position-relative"
-                  href="#"
+                  href="#demo-4"
                   >blog</a
                 >
               </li>
@@ -111,7 +112,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link text-uppercase text-white position-relative"
-                  href="#"
+                  href="#demo-5"
                   >contact</a
                 >
               </li>
@@ -132,7 +133,7 @@
       </div>
     </header>
     <!-- ------------------------------section 2------------------------ -->
-    <section class="about-me mt-5 vh-100 mb-md-0">
+    <section class="about-me mt-5 vh-100 mb-md-0" id="demo-1">
       <!-- ----------------------container--------------------------- -->
       <div class="container">
         <!-- --------------------row-------------------------- -->
@@ -140,10 +141,10 @@
           class="row border align-items-center justify-content-center gx-5 p-3"
         >
           <!-- -------------------------item of media------------------------ -->
-          <div class="item-row col-lg-6 col-md-6">
+          <div class="item-row col-lg-6 col-md-6" data-aos="fade-right">
             <!-- -------------------------content item------------------- -->
             <div
-              class="inner-item d-flex justify-content-around align-items-center me-lg-5"
+              class="inner-item d-flex justify-content-around align-items-center me-lg-5" 
             >
               <div class="item-photo">
                 <img
@@ -232,7 +233,7 @@
             </div>
           </div>
           <!-- --------------about text-------------------------- -->
-          <div class="item-about col-lg-6 col-md-6">
+          <div class="item-about col-lg-6 col-md-6" data-aos="fade-left">
             <h2 class="under-border position-relative mt-sm-2">About me</h2>
             <div class="about-content my-5 fs-5">
               <p class="mb-0">
@@ -261,16 +262,16 @@
       </div>
     </section>
     <!-- ---------------------section 3--------------------------------- -->
-    <section class="services down-services">
+    <section class="services down-services p-lg-0" id="demo-2">
       <div class="services-header text-center pb-4">
         <h2 class="fw-bold h1 mb-3">SERVICES</h2>
         <p class="modfiy-services-p position-relative ">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </p>
       </div>
-      <div class="container">
+      <div class="container" >
         <div class="row g-3 p-3">
-          <div class="inner-row-ser col-lg-4 col-md-4">
+          <div class="inner-row-ser col-lg-4 col-md-4" data-aos="flip-left">
             <div class="item-design text-center p-3">
               <i
                 class="bag-modify fa-solid fa-briefcase rounded-circle fs-2 my-4"
@@ -284,7 +285,7 @@
               </p>
             </div>
           </div>
-          <div class="inner-row-ser col-lg-4 col-md-4">
+          <div class="inner-row-ser col-lg-4 col-md-4" data-aos="flip-right">
             <div class="item-design text-center rounded-2 p-3">
               <i
                 class="bag-modify fa-solid fa-list-check rounded-circle fs-2 my-4"
@@ -298,7 +299,7 @@
               </p>
             </div>
           </div>
-          <div class="inner-row-ser col-lg-4 col-md-4 rounded-3">
+          <div class="inner-row-ser col-lg-4 col-md-4 rounded-3" data-aos="flip-left">
             <div class="item-design text-center p-3">
               <i
                 class="bag-modify fa-solid fa-chart-simple rounded-circle fs-2 my-4"
@@ -312,7 +313,7 @@
               </p>
             </div>
           </div>
-          <div class="inner-row-ser col-lg-4 col-md-4">
+          <div class="inner-row-ser col-lg-4 col-md-4" data-aos="flip-right">
             <div class="item-design text-center p-3">
               <i
                 class="bag-modify fa-solid fa-binoculars rounded-circle fs-2 my-4"
@@ -326,7 +327,7 @@
               </p>
             </div>
           </div>
-          <div class="inner-row-ser col-lg-4 col-md-4">
+          <div class="inner-row-ser col-lg-4 col-md-4" data-aos="flip-left">
             <div class="item-design text-center p-3">
               <i
                 class="bag-modify fa-solid fa-sun rounded-circle fs-2 my-4"
@@ -340,7 +341,7 @@
               </p>
             </div>
           </div>
-          <div class="inner-row-ser col-lg-4 col-md-4">
+          <div class="inner-row-ser col-lg-4 col-md-4" data-aos="flip-right">
             <div class="item-design text-center p-3">
               <i
                 class="bag-modify fa-solid fa-calendar-week rounded-circle fs-2 my-4"
@@ -358,7 +359,7 @@
       </div>
     </section>
     <!-- --------------------secion 4------------------------ -->
-    <section class="total mt-5">
+    <section class="total mt-5" id="demo-3" data-aos="zoom-in">
       <div class="works-icons text-center h-100 p-5 text-white">
         <div class="container">
           <div class="row bg-transparent p-5">
@@ -390,7 +391,8 @@
       </div>
     </section>
     <!-- ----------------------------------secion 5--------------- -->
-    <section class="protofilo mt-5">
+    <section class="protofilo mt-5" data-aos="fade-up"
+    data-aos-duration="3000">
       <div class="services-header text-center pb-5">
         <h2 class="fw-bold h1 mb-3">PORTFOLIO</h2>
         <p class="modfiy-services-p position-relative">
@@ -404,12 +406,12 @@
               <div class="card-photo overflow-hidden w-100">
                 <img src="picture/work-1.jpg" width="100%" alt="work photo" />
               </div>
-              <div class="item-content p-2 border border-2">
+              <div class="item-content p-2 border border-2 ">
                 <h2 class="h4">Lorem, ipsum dolor.</h2>
                 <p>
                   <span class="modfiy-text">Web Design</span> / 18 Sep. 2018
-                  <a href="#" class="move-icon"
-                    ><span class="fa-xl"
+                  <a href="#" class="move-icon ms-sm-0 "
+                    ><span class="fa-xl remove-span "
                       ><i class="fa-solid fa-circle-plus"></i></span
                   ></a>
                 </p>
@@ -505,7 +507,7 @@
       </div>
     </section>
     <!-- --------------section 6--------------- -->
-    <section class="xavi-alonso mt-5">
+    <section class="xavi-alonso mt-5" >
       <div class="inner-xavi">
         <div
           id="carouselExampleSlidesOnly "
@@ -553,7 +555,9 @@
       </div>
     </section>
     <!-- -------------------section 7------------------ -->
-    <section class="blog bg- mt-5 vh-100">
+    <section class="blog bg- mt-5 vh-100" id="demo-4" data-aos="fade-down"
+    data-aos-easing="linear"
+    data-aos-duration="1500">
       <div class="blog text-center pb-5">
         <h2 class="fw-bold h1 mb-3">BLOG</h2>
         <p class="modfiy-services-p position-relative">
@@ -689,11 +693,13 @@
       </div>
     </section>
     <!-- -------------section 8------------------- -->
-    <section class="send-message vh-100 mt-sm-5">
+    <section class="send-message vh-100 mt-sm-5" id="demo-5">
       <div class="send-ele">
         <div class="container">
           <div class="row p-5">
-            <div class="send-item col-lg-6 col-md-6 ">
+            <div class="send-item col-lg-6 col-md-6 " data-aos="fade-right"
+            data-aos-offset="300"
+            data-aos-easing="ease-in-sine">
               <div class="send-content">
                 <h2 class=" message-us position-relative">Send Message Us</h2>
                 <form class="mt-4">
@@ -705,8 +711,11 @@
                 </form>
               </div>
             </div>
-            <div class="send-item col-lg-6 col-md-6 ">
-              <div class="send-content">
+            <div class="send-item col-lg-6 col-md-6 " >
+              <div class="send-content" data-aos="fade-left"
+              data-aos-anchor="#example-anchor"
+              data-aos-offset="500"
+              data-aos-duration="500">
                 <h2 class=" message-us position-relative">Get in Touch</h2>
                 <p class="p-1 pt-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim <br/> quibusdam suscipit quis, consequatur culpa facere ipsam aut et <br/> magni sapiente quaerat voluptatem explicabo eligendi maiores <br/> soluta numquam accusamus libero tenetur.</p>
                 <p><i class="fa-solid fa-location-dot me-1 get-1"></i> <span> 329 WASHINGTON ST BOSTON, MA 02108 </span></p>
@@ -739,6 +748,10 @@
         backSpeed: 100,
         loop: true,
       });
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
